# gts-python

./: Makefile  README.md
.github/workflows/: ci.yml
gts/: README.md  pyproject.toml
gts/src/gts/: __init__.py  __main__.py  cli.py  entities.py  files_reader.py  gts.py  ops.py  path_resolver.py  schema_cast.py  server.py  store.py  x_gts_ref.py
tests/: test_entities.py  test_gts_id.py  test_path_resolver.py  test_store.py
