[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

[project]
name = "gts"
version = "0.1.0"
description = "Global Type System (GTS) helpers: identifiers, parsing, validation, and operations"
readme = "README.md"
authors = [{ name = "GTS Community" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
dependencies = [
  "jsonschema>=4.18,<5",
  "fastapi>=0.110,<1",
  "uvicorn>=0.23,<1",
  "pyyaml>=6.0,<7"
]

[project.urls]
Homepage = "https://github.com/globaltypesystem"
Repository = "https://github.com/globaltypesystem/gts-python"

[project.scripts]
gts = "gts.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gts"]
